--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ img {
 	margin-bottom: 2vw;
 }
 
+video {
+	margin-bottom: 2vw;
+	width: 100%;
+	height: 100%;
+}
+
 .header {
 	width: 100%;
 	height: 100%;
@@ -33,11 +39,14 @@ p {
 	text-align: center;
 }
 
-.image {
-	text-align: center;
+.hline { 
+	width:100%; 
+	height:1px; 
+	background: black; 
+	margin-top: 1vw; 
+	margin-bottom: 
+	2vw; 
 }
-
-.hline { width:100%; height:1px; background: black; margin-top: 1vw; margin-bottom: 2vw; }
 
 h6 {
 	font-size: 0.7em;
